tests/analyzer/fail/enum-out-of-range-unsigned.api
// expected: 1005

type bad = enum(u8) {
  a = -1,
};
